Small update of the French translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Geany 1.25\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-09 20:09+0200\n"
-"PO-Revision-Date: 2015-09-09 20:24+0200\n"
+"POT-Creation-Date: 2015-09-10 14:43+0200\n"
+"PO-Revision-Date: 2015-09-10 14:45+0200\n"
 "Last-Translator: Colomban Wendling <ban@herbesfolles.org>\n"
 "Language-Team: French <geany-i18n@uvena.de>\n"
 "Language: fr\n"
@@ -1623,11 +1623,10 @@ msgid "Follow path of the current file"
 msgstr "Suivre le chemin du fichier courant"
 
 #: ../data/geany.glade.h:328
-msgid ""
-"Whether to execute \\\"cd $path\\\" when you switch between opened files"
+msgid "Whether to execute \"cd $path\" when you switch between opened files"
 msgstr ""
-"Définit si l'on doit exécuter \\\"cd $path\\\" lorsque vous basculez entre "
-"les fichiers ouverts"
+"Définit si l'on doit exécuter « cd $path » lorsque vous basculez entre les "
+"fichiers ouverts"
 
 #: ../data/geany.glade.h:329
 msgid "Execute programs in the VTE"
