Update msgid for "Use multi-line matchin_g"
This also includes obvious changes to msgstr of some languages.
Languages that didn't explicitly use 'l' as previous shortcut or
didn't have 'g' on their translation were left untouched.

--- a/po/ast.po
+++ b/po/ast.po
@@ -4313,7 +4313,7 @@ msgstr ""
 "carauteres de control correspondientes"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
