--- a/po/be.po
+++ b/po/be.po
@@ -4197,7 +4197,7 @@ msgstr ""
 "кіруючыя сімвалы"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr "Выкарыстоўваць шматрадковы пошук"
 
 #: ../src/search.c:327
