--- a/po/bg.po
+++ b/po/bg.po
@@ -4522,7 +4522,7 @@ msgstr ""
 "контролни символи."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
