--- a/po/ca.po
+++ b/po/ca.po
@@ -4218,7 +4218,7 @@ msgstr ""
 "seqüències de control corresponents"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
