--- a/po/cs.po
+++ b/po/cs.po
@@ -4214,7 +4214,7 @@ msgstr ""
 "kontrolními znaky."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
