--- a/po/el.po
+++ b/po/el.po
@@ -4280,7 +4280,7 @@ msgstr ""
 "αντίστοιχους χαρακτήρες ελέγχου"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
