--- a/po/eu.po
+++ b/po/eu.po
@@ -4087,7 +4087,7 @@ msgstr ""
 "kontrol-karaktereekin"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
