--- a/po/fa.po
+++ b/po/fa.po
@@ -4270,7 +4270,7 @@ msgstr ""
 "corresponding control characters"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
