--- a/po/gl.po
+++ b/po/gl.po
@@ -4254,7 +4254,7 @@ msgstr ""
 "correspondentes caracteres de control"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
