--- a/po/it.po
+++ b/po/it.po
@@ -4306,7 +4306,7 @@ msgstr ""
 "corrispondenti caratteri di controllo"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
