--- a/po/lt.po
+++ b/po/lt.po
@@ -4194,7 +4194,7 @@ msgstr ""
 "valdymo simboliais"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
