--- a/po/nn.po
+++ b/po/nn.po
@@ -4030,7 +4030,7 @@ msgid ""
 msgstr ""
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
