--- a/po/ru.po
+++ b/po/ru.po
@@ -4217,7 +4217,7 @@ msgstr ""
 "управляющими символами"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr "_Многострочный поиск"
 
 #: ../src/search.c:327
