--- a/po/sl.po
+++ b/po/sl.po
@@ -4253,7 +4253,7 @@ msgstr ""
 "z ustreznimi kontrolnimi znaki"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
