--- a/po/sv.po
+++ b/po/sv.po
@@ -4183,7 +4183,7 @@ msgstr ""
 "specialtecken."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr "Använd flerraders matchning"
 
 #: ../src/search.c:327
