--- a/po/uk.po
+++ b/po/uk.po
@@ -4424,7 +4424,7 @@ msgstr ""
 "керівними символами."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
