--- a/po/vi.po
+++ b/po/vi.po
@@ -4307,7 +4307,7 @@ msgstr ""
 "Unicode) bằng ký tự điều khiển tương ứng"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
