--- a/po/ar.po
+++ b/po/ar.po
@@ -4058,7 +4058,7 @@ msgid ""
 msgstr ""
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
