--- a/po/fi.po
+++ b/po/fi.po
@@ -4235,7 +4235,7 @@ msgstr ""
 "ohjausmerkeillä"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
