--- a/po/hu.po
+++ b/po/hu.po
@@ -4236,7 +4236,7 @@ msgstr ""
 "a megfelelő vezérlőkarakterekkel."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
