--- a/po/id.po
+++ b/po/id.po
@@ -4249,7 +4249,7 @@ msgstr ""
 "kontrol penggantinya"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
