--- a/po/ja.po
+++ b/po/ja.po
@@ -4171,7 +4171,7 @@ msgstr ""
 "ます"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
