--- a/po/kk.po
+++ b/po/kk.po
@@ -4072,7 +4072,7 @@ msgid ""
 msgstr ""
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
