--- a/po/ko.po
+++ b/po/ko.po
@@ -4333,7 +4333,7 @@ msgstr ""
 "다."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
