--- a/po/lb.po
+++ b/po/lb.po
@@ -4357,7 +4357,7 @@ msgstr ""
 "entspriechend Zeechen"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
