--- a/po/pl.po
+++ b/po/pl.po
@@ -4231,7 +4231,7 @@ msgstr ""
 "kontrolnymi."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
