--- a/po/pt.po
+++ b/po/pt.po
@@ -4229,7 +4229,7 @@ msgstr ""
 "caracteres de controlo correspondentes"
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr "Usar comparação multi_Linha"
 
 #: ../src/search.c:327
