--- a/po/ro.po
+++ b/po/ro.po
@@ -4366,7 +4366,7 @@ msgstr ""
 "caracterele de control corespunzătoare."
 
 #: ../src/search.c:322
-msgid "Use multi-_line matching"
+msgid "Use multi-line matchin_g"
 msgstr ""
 
 #: ../src/search.c:327
