Update of Greek translation

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Geany 1.26 (unreleased)
 
     Internationalization
-    * Update translations: sv
+    * Update translations: sv, el
 
 Geany 1.25 (July 12, 2015)
 
