Update of Portuguese translation

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 Geany 1.26 (unreleased)
 
     Internationalization
-    * Update translations: sv, el
+    * Update translations: sv, el, pt
+
 
 Geany 1.25 (July 12, 2015)
 
