plugins: pass GModule * to geany_load_module()
This is rquired to enable the plugin to call g_module_make_resident() within
its geany_load_module(). This must be done if the plugin registers new
GTypes within that function.

plugin_module_make_resident() doesn't work because it's not an allowed API
function to call from there. Simply allowing it doesn't suffice because
internally the built-in plugin loader isn't fully set up yet:
plugin->proxy_data isn't set to the GModule at this point (by design), and
plugin_module_make_resident() requires that to be set.

This changes a public API, but it is unreleased so far, so not a problem (by
definition).

--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -328,7 +328,7 @@ static void hello_cleanup(GeanyPlugin *plugin, gpointer pdata)
 
 
 G_MODULE_EXPORT
-void geany_load_module(GeanyPlugin *plugin)
+void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 	/* Step 1: Set metadata */
 	plugin->info->name = "HelloWorld";
@@ -357,7 +357,7 @@ as <c> extern "C" </c>, for example:
 
 @code
 
-extern "C" void geany_load_module(GeanyPlugin *plugin)
+extern "C" void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 }
 
@@ -507,7 +507,7 @@ static void hello_cleanup(GeanyPlugin *plugin, gpointer pdata)
 
 
 G_MODULE_EXPORT
-void geany_load_module(GeanyPlugin *plugin)
+void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 	plugin->info->name = "HelloWorld";
 	plugin->info->description = "Just another tool to say hello world";
@@ -659,7 +659,7 @@ becomes
 
 @code
 G_MODULE_EXPORT
-void geany_load_module(GeanyPlugin *plugin)
+void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 // ...
 	plugin->info->name = "HelloWorld";
@@ -716,7 +716,7 @@ static gboolean on_editor_notify_cb(GObject *object, GeanyEditor *editor,
 
 
 G_MODULE_EXPORT
-void geany_load_module(GeanyPlugin *plugin)
+void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 // ...
 	plugin->funcs->callbacks = plugin_callbacks;
@@ -914,7 +914,7 @@ static void demoproxy_cleanup(GeanyPlugin *plugin, gpointer data)
 
 
 G_MODULE_EXPORT
-void geany_load_module(GeanyPlugin *plugin)
+void geany_load_module(GeanyPlugin *plugin, GModule *module)
 {
 	plugin->info->name = _("Demo Proxy");
 	plugin->info->description = _("Example Proxy.");
